managed/lab/components/echo/base/ingress-echo.yaml
---
# argo external
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: echo
  namespace: lab
  # annotations:
  #  nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - echo.american-broomstick.com
    secretName: echo-tls
  rules:
  - host: echo.american-broomstick.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-simple-web-server
            port:
              number: 80
    #   - path: /
    #     pathType: Prefix
    #     backend:
    #       service:
    #         name: argo-server
    #         port:
    #           number: 2746
